[metadata]
name = neutron-portcheck-client
summary = OpenStack Networking Port Check Command
description-file =
    README.rst
author = Anton Kurbatov
author-email = bxfree@gmail.com
home-page = https://github.com/antonkurbatov

[files]
packages =
    neutron_portcheck_client

[entry_points]
openstack.neutronclient.v2 =
    port_check = neutron_portcheck_client.osc.v2.port_check:CheckPort